fix: overflow bug

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -2,3 +2,8 @@
 .bn-onboard-custom.bn-onboard-modal {
   z-index: 99;
 }
+
+/* Memo: To fix stars background bug */
+body {
+  overflow-x: hidden;
+}
